--- a/BackEnd/blog_project/views/partials/footer.ejs
+++ b/BackEnd/blog_project/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-  <footer>
+  <footer class = "footer">
 
-
-
+    <p class = "footerText">Copyright © Marcelo Yuri Sampaio <%= year %></p>
+  
   </footer>
 </body>
 </html>
