--- a/BackEnd/blog_project/views/partials/header.ejs
+++ b/BackEnd/blog_project/views/partials/header.ejs
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/footer.css">
   <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="/styles/pages/index.css">
+  <link rel="stylesheet" href="/styles/pages/login.css">
+  <link rel="stylesheet" href="/styles/pages/register.css">
+  <link rel="stylesheet" href="/styles/pages/createEssay.css">
+  <link rel="stylesheet" href="/styles/pages/yourEssays.css">
   <title>Essays and Articles</title>
 </head>
 <body>
@@ -14,9 +19,9 @@
         
       <ul class = "navList">
             
-          <li class = "navItem" id ="navLogo">
-              <a class = "navButton" href="/">
-                <img src="/BackEnd/blog_project/public/images/mysfLogo.png" alt="MYSF Logo" id ="mysfLogo">
+          <li class = "navItem"  id="navLogo">
+              <a class = "navButton" href="/" id = "navImgButton">
+                <img src="/images/mysfLogo.png" alt="MYSF Logo" id ="mysfLogo">
               </a>
             </li>
             
